--- a/public/kanbas/courses/assignments/screen.html
+++ b/public/kanbas/courses/assignments/screen.html
@@ -365,7 +365,9 @@
                       <div class="row">
                         <div class="col-md-1 px-0 wd-col-width-icon">
                           <i class="fa-solid fa-grip-vertical wd-modules"></i>
-                          <i class="fa-solid fa-file-signature"></i>
+                          <i
+                            class="fa-solid fa-file-signature wd-green-color"
+                          ></i>
                         </div>
                         <div class="col-md-10 px-0">
                           <p class="wd-assignemnt-headings">
@@ -387,7 +389,7 @@
                         <div class="col">
                           <div class="float-end">
                             <i
-                              class="fa-solid fa-circle-check wd-disabled-red-color m-3"
+                              class="fa-solid fa-circle-check wd-disabled-green-color m-3"
                               disabled
                             ></i>
                             <i class="fa-solid fa-ellipsis-vertical"></i>
@@ -402,7 +404,9 @@
                       <div class="row">
                         <div class="col-md-1 px-0 wd-col-width-icon">
                           <i class="fa-solid fa-grip-vertical wd-modules"></i>
-                          <i class="fa-solid fa-file-signature"></i>
+                          <i
+                            class="fa-solid fa-file-signature wd-green-color"
+                          ></i>
                         </div>
                         <div class="col-md-10 px-0">
                           <p class="wd-assignemnt-headings">
@@ -424,7 +428,7 @@
                         <div class="col">
                           <div class="float-end">
                             <i
-                              class="fa-solid fa-circle-check wd-disabled-red-color m-3"
+                              class="fa-solid fa-circle-check wd-disabled-green-color m-3"
                               disabled
                             ></i>
                             <i class="fa-solid fa-ellipsis-vertical"></i>
@@ -439,7 +443,9 @@
                       <div class="row">
                         <div class="col-md-1 px-0 wd-col-width-icon">
                           <i class="fa-solid fa-grip-vertical wd-modules"></i>
-                          <i class="fa-solid fa-file-signature"></i>
+                          <i
+                            class="fa-solid fa-file-signature wd-green-color"
+                          ></i>
                         </div>
                         <div class="col-md-10 px-0">
                           <p class="wd-assignemnt-headings">
@@ -461,7 +467,7 @@
                         <div class="col">
                           <div class="float-end">
                             <i
-                              class="fa-solid fa-circle-check wd-disabled-red-color m-3"
+                              class="fa-solid fa-circle-check wd-disabled-green-color m-3"
                               disabled
                             ></i>
                             <i class="fa-solid fa-ellipsis-vertical"></i>
@@ -476,7 +482,9 @@
                       <div class="row">
                         <div class="col-md-1 px-0 wd-col-width-icon">
                           <i class="fa-solid fa-grip-vertical wd-modules"></i>
-                          <i class="fa-solid fa-file-signature"></i>
+                          <i
+                            class="fa-solid fa-file-signature wd-green-color"
+                          ></i>
                         </div>
                         <div class="col-md-10 px-0">
                           <p class="wd-assignemnt-headings">
@@ -498,7 +506,7 @@
                         <div class="col">
                           <div class="float-end">
                             <i
-                              class="fa-solid fa-circle-check wd-disabled-red-color m-3"
+                              class="fa-solid fa-circle-check wd-disabled-green-color m-3"
                               disabled
                             ></i>
                             <i class="fa-solid fa-ellipsis-vertical"></i>
@@ -513,7 +521,9 @@
                       <div class="row">
                         <div class="col-md-1 px-0 wd-col-width-icon">
                           <i class="fa-solid fa-grip-vertical wd-modules"></i>
-                          <i class="fa-solid fa-file-signature"></i>
+                          <i
+                            class="fa-solid fa-file-signature wd-green-color"
+                          ></i>
                         </div>
                         <div class="col-md-10 px-0">
                           <p class="wd-assignemnt-headings">
@@ -535,7 +545,7 @@
                         <div class="col">
                           <div class="float-end">
                             <i
-                              class="fa-solid fa-circle-check wd-disabled-red-color m-3"
+                              class="fa-solid fa-circle-check wd-disabled-green-color m-3"
                               disabled
                             ></i>
                             <i class="fa-solid fa-ellipsis-vertical"></i>
@@ -550,7 +560,9 @@
                       <div class="row">
                         <div class="col-md-1 px-0 wd-col-width-icon">
                           <i class="fa-solid fa-grip-vertical wd-modules"></i>
-                          <i class="fa-solid fa-file-signature"></i>
+                          <i
+                            class="fa-solid fa-file-signature wd-green-color"
+                          ></i>
                         </div>
                         <div class="col-md-10 px-0">
                           <p class="wd-assignemnt-headings">
@@ -572,7 +584,7 @@
                         <div class="col">
                           <div class="float-end">
                             <i
-                              class="fa-solid fa-circle-check wd-disabled-red-color m-3"
+                              class="fa-solid fa-circle-check wd-disabled-green-color m-3"
                               disabled
                             ></i>
                             <i class="fa-solid fa-ellipsis-vertical"></i>
