--- a/public/kanbas/courses/grades/screen.html
+++ b/public/kanbas/courses/grades/screen.html
@@ -23,9 +23,7 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div
-          class="col-1 wd-no-padding wd-width-70 d-none d-md-flex flex-column"
-        >
+        <div class="col-1 p-0 wd-width-70 d-none d-md-flex flex-column">
           <ul class="wd-kanbas-navigation wd-red-color flex-grow-1">
             <li>
               <a href="http://northeastern.edu"
@@ -99,20 +97,18 @@
           </ul>
         </div>
         <div class="col-11">
-          <div class="wd-margin-top-10 wd-top-bar">
+          <div class="mt-2 wd-top-bar">
             <div>
               <nav aria-label="breadcrumb">
                 <div class="breadcrumb-container">
-                  <i
-                    class="fa-solid fa-bars wd-margin-left-10 wd-right-margin-30 wd-red-color"
-                  ></i>
+                  <i class="fa-solid fa-bars ms-3 me-4 wd-red-color"></i>
                   <ol class="breadcrumb">
-                    <li class="breadcrumb-item wd-margin-top-15">
+                    <li class="breadcrumb-item mt-3">
                       <a href="#" class="wd-remove-text-decoration wd-red-color"
                         >CS5610.11744.202310</a
                       >
                     </li>
-                    <li class="breadcrumb-item wd-margin-top-15">
+                    <li class="breadcrumb-item mt-3">
                       <a href="#" class="wd-remove-text-decoration wd-red-color"
                         >Grades</a
                       >
@@ -121,21 +117,21 @@
                 </div>
               </nav>
             </div>
-            <button type="button" class="btn btn-sm wd-right-margin-30">
+            <!-- <button type="button" class="btn btn-sm me-4">
               <i class="fa-solid fa-glasses"></i> Student View
-            </button>
+            </button> -->
           </div>
           <hr class="mb-4 ms-3" />
 
           <div class="container-fluid">
             <div class="row">
               <div class="col-2">
-                <p class="wd-course-nav-top-text wd-margin-left-10">
+                <p class="wd-course-nav-top-text ms-3">
                   202410_1 Fall 2023 Semest…
                 </p>
                 <table>
                   <tbody class="wd-navigation">
-                    <ul style="margin: 0; padding-bottom: 0">
+                    <ul class="m-0 pb-0">
                       <tr>
                         <td>
                           <li>
@@ -475,7 +471,7 @@
                               name="princes_a7"
                               value="85"
                               style="width: 30px; text-align: center"
-                              class="wd-margin-left-45"
+                              class="ms-5"
                             />
                             <button type="button" class="btn btn-sm">
                               <i class="fa-solid fa-file-import"></i>
